--- a/app/extensions/documentation/public/login.html
+++ b/app/extensions/documentation/public/login.html
@@ -120,7 +120,7 @@
               <div class="col-lg-6 col-lg-offset-3 col-md-12">
                 <img alt="Strapi logo" class="logo" src="https://strapi.io/assets/images/logo_login.png">
                 <h2 class="sub-title">Enter the password to access the documentation.</h2>
-                <form method="post" action="/documentation/login">
+                <form method="post" action="https://develop.ruletap.tk/api/documentation/login">
                   <span class="error">Wrong password...</span>
                   <label>Password</label>
                   <input type="password" name="password" placeholder="•••••••••">
