--- a/app/extensions/documentation/public/index.html
+++ b/app/extensions/documentation/public/index.html
@@ -1,9 +1,9 @@
 <!-- HTML for static distribution bundle build --><!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <title>Swagger UI</title>
-    <link rel="stylesheet" type="text/css" href="/plugins/documentation/swagger-ui.css">
-    <link rel="icon" type="image/png" href="/plugins/documentation/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/plugins/documentation/favicon-16x16.png" sizes="16x16">
+    <link rel="stylesheet" type="text/css" href="https://develop.ruletap.tk/api/plugins/documentation/swagger-ui.css">
+    <link rel="icon" type="image/png" href="https://develop.ruletap.tk/api/plugins/documentation/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="https://develop.ruletap.tk/api/plugins/documentation/favicon-16x16.png" sizes="16x16">
     <style>
       html
       {
@@ -51,7 +51,7 @@
       }
     </script>
 
-    <script src="/plugins/documentation/swagger-ui-bundle.js"> </script>
-    <script src="/plugins/documentation/swagger-ui-standalone-preset.js"> </script>
+    <script src="https://develop.ruletap.tk/api/plugins/documentation/swagger-ui-bundle.js"> </script>
+    <script src="https://develop.ruletap.tk/api/plugins/documentation/swagger-ui-standalone-preset.js"> </script>
   </body>
 </html>
